refactor: move create new ArmadilloLinkFile in StorageService to make testable